@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.698 2008/02/09 20:44:14 jnemeth Exp $
+# $NetBSD: Makefile,v 1.699 2008/02/13 22:09:23 adrianp Exp $
 #
 
 COMMENT=	Networking tools
@@ -157,6 +157,10 @@ SUBDIR+=	isc-dhclient
 SUBDIR+=	isc-dhcp
 SUBDIR+=	isc-dhcpd
 SUBDIR+=	isc-dhcrelay
+SUBDIR+=	isc-dhclient4
+SUBDIR+=	isc-dhcp4
+SUBDIR+=	isc-dhcpd4
+SUBDIR+=	isc-dhcrelay4
 SUBDIR+=	ishell
 SUBDIR+=	isic
 SUBDIR+=	ispman
