@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2008,v 1.274 2008/02/13 19:46:37 kefren Exp $
+$NetBSD: CHANGES-2008,v 1.275 2008/02/13 22:18:21 adrianp Exp $
 
 Changes to the packages collection and infrastructure in 2008:
 
@@ -478,3 +478,7 @@ Changes to the packages collection and infrastructure in 2008:
 	Added devel/mono-addins version 0.3 [kefren 2008-02-13]
 	Added devel/monodevelop version 0.18.1 [kefren 2008-02-13]
 	Added www/mono-xsp version 1.2.6 [kefren 2008-02-13]
+	Added net/isc-dhcp4 version 4.0.0 [adrianp 2008-02-13]
+	Added net/isc-dhclient4 version 4.0.0 [adrianp 2008-02-13]
+	Added net/isc-dhcpd4 version 4.0.0 [adrianp 2008-02-13]
+	Added net/isc-dhcrelay4 version 4.0.0 [adrianp 2008-02-13]
